# sovereign-v4

./: .gitignore  Cargo.toml  DEPLOYMENT.md  PROGRESS.md  README.md  ROADMAP.md  SPEC.md  config.toml  config.toml.example  sovereign_trades.db
config/: ibkr_live.toml  ibkr_paper.toml
docs/: AGI_GAP_ANALYSIS.md
exercises/: day01_variables.rs  day02_functions.rs  day04_ownership.rs  week1_project.rs
scripts/: kill.sh  start_live.sh  start_paper.sh
src/: backtest.rs  config.rs  lib.rs  main.rs  main.rs.bak  main.rs.save  portfolio.rs  status.rs  universe.rs
src/broker/: alpaca.rs  ibkr.rs  mod.rs  mt5.rs  prime_broker.rs  tws.rs
src/comms/: mod.rs  monitor.rs  telegram.rs
src/core/: agent.rs  capitulation.rs  causality.rs  codegen.rs  consolidation.rs  coordinator.rs  counterfactual.rs  embeddings.rs  foundation.rs  guardian.rs  health.rs  health.rs.bak  learner.rs  lossless.rs  metalearner.rs  mod.rs  moe.rs  monitor.rs  regime.rs  selfmod.rs  sequence.rs  sharded_memory.rs  sr.rs  strategy.rs  streaming.rs  transfer.rs  transferability.rs  types.rs  weakness.rs  worldmodel.rs
src/data/: alpaca_stream.rs  database.rs  memory.rs  mod.rs  mt5_bridge.rs  multi_feed.rs  postgres.rs  redis.rs
src/execution/: algorithms.rs  dark_pool.rs  mod.rs  order_manager.rs  smart_router.rs  tca.rs  venue.rs
vps/: bridge_watchdog.py  mt5_bridge_v3.py
