[package]
name = "sovereign"
version = "4.0.0"
edition = "2021"
authors = ["Sovereign Trading System"]
description = "Institutional-grade autonomous trading system"
license = "Proprietary"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP & WebSocket
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error Handling
anyhow = "1"
thiserror = "1"

# Time & Decimal
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
rust_decimal_macros = "1.39.0"
toml = "0.9.10"
axum = "0.8.8"
futures-util = "0.3.31"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sovereign"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
